added start trip and complete trip route
